--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
+		"@types/pdf-parse": "^1.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -35,6 +36,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"langchain": "^0.0.48"
+		"@pinecone-database/pinecone": "^0.0.10",
+		"dotenv": "^16.0.3",
+		"langchain": "^0.0.48",
+		"mongodb": "^5.2.0",
+		"pdf-parse": "^1.1.1"
 	}
 }
